--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 # for database
 spring.datasource.url=jdbc:mysql://localhost:3306/rundata?useSSL=false&serverTimezone=JST
+#spring.datasource.url=jdbc:mysql://localhost:3306/rundata?useSSL=false&serverTimezone=JST
 spring.datasource.username=hebanghui
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
